--- a/app/src/main/res/layout/item_pikmin.xml
+++ b/app/src/main/res/layout/item_pikmin.xml
@@ -18,12 +18,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="8dp">
+        android:padding="6dp">
 
         <ImageView
             android:id="@+id/imagen_pikmin"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="120dp"
             android:scaleType="centerCrop"/>
         
         <TextView
@@ -31,9 +31,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textSize="18sp"
-            android:paddingTop="8dp"
-            android:textStyle="bold"/>
+            android:textSize="16sp"
+            android:paddingTop="6dp"/>
+
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
