--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,7 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.Piklopedia" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-    </style>
+<resources>
+    <style name="Theme.TemaPikmin" parent="Theme.Material3.DayNight.NoActionBar">
 
-    <style name="Theme.Piklopedia" parent="Base.Theme.Piklopedia" />
+        <item name="android:windowBackground">@color/crema_claro</item>
+
+    </style>
 </resources>
