--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="verde_hierba">#4CAF50</color>
+    <color name="verde_hierba">#81C784</color>
     <color name="crema_claro">#FFF8E1</color>
 </resources>
