creando el dialogo del menu

--- a/app/src/main/res/layout/pantalla_detalle_pikmin.xml
+++ b/app/src/main/res/layout/pantalla_detalle_pikmin.xml
@@ -47,7 +47,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:layout_marginTop="20dp"
-                style="@style/NombrePantallaDetalles"
+                style="@style/Titulos"
                  />
 
             <TextView
