--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="verde_hierba">#81C784</color>
-    <color name="crema_claro">#FFF8E1</color>
+    <color name="crema_claro">#FFEFC0</color>
 </resources>
