--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,6 +13,10 @@
         <item name="android:textSize">26sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:fontFamily">sans-serif-condensed</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:layout_marginBottom">20dp</item>
+        <item name="android:background">@color/verde_hierba</item>
+
     </style>
 
     <style name="DescripcionPantallaDetalles">
