--- a/app/src/main/res/layout/item_pikmin.xml
+++ b/app/src/main/res/layout/item_pikmin.xml
@@ -24,7 +24,9 @@
             android:id="@+id/imagen_pikmin"
             android:layout_width="wrap_content"
             android:layout_height="180dp"
-            android:scaleType="centerCrop"/>
+            android:scaleType="centerCrop"
+            style="@style/fondoBlanco"
+            />
         
         <TextView
             android:id="@+id/nombre_pikmin"
