--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,7 +9,11 @@
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="Titulos">
+    <style name="fondoBlanco">
+        <item name="android:background">@color/white</item>
+    </style>
+
+    <style name="NegritaGrandeFondoVerde">
         <item name="android:textSize">26sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:fontFamily">sans-serif-condensed</item>
@@ -19,13 +23,13 @@
 
     </style>
 
-    <style name="DescripcionPantallaDetalles">
+    <style name="letraMedianaLineasSeparadas">
         <item name="android:textSize">18sp</item>
         <item name="android:fontFamily">sans-serif-condensed</item>
         <item name="android:lineSpacingExtra">6sp</item>
     </style>
     
-    <style name="TextosConfiguracion">
+    <style name="letraNegritaMedianaConMargen">
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:layout_marginBottom">20dp</item>
