--- a/app/src/main/res/layout/item_pikmin.xml
+++ b/app/src/main/res/layout/item_pikmin.xml
@@ -5,7 +5,7 @@
 -->
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="12dp"
@@ -27,15 +27,16 @@
             android:scaleType="centerCrop"
             style="@style/fondoBlanco"
             />
-        
+
         <TextView
             android:id="@+id/nombre_pikmin"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:gravity="center"
             android:paddingTop="8dp"
-           android:paddingBottom="8dp"
+            android:paddingBottom="8dp"
             style="@style/TextoFondoRedondeado"/>
+
 
     </LinearLayout>
 
