--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,10 +23,9 @@
 
     </style>
 
-    <style name="letraMedianaLineasSeparadas">
+    <style name="letraMediana">
         <item name="android:textSize">18sp</item>
         <item name="android:fontFamily">sans-serif-condensed</item>
-        <item name="android:lineSpacingExtra">6sp</item>
     </style>
     
     <style name="letraNegritaMedianaConMargen">
@@ -34,4 +33,13 @@
         <item name="android:textStyle">bold</item>
         <item name="android:layout_marginBottom">20dp</item>
     </style>
+
+    <style name="negritaLetraMediana">
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">sans-serif-condensed</item>
+        <item name="android:textStyle">bold</item>
+
+    </style>
+
+
 </resources>
