--- a/app/src/main/res/layout/pantalla_detalle_pikmin.xml
+++ b/app/src/main/res/layout/pantalla_detalle_pikmin.xml
@@ -59,7 +59,7 @@
                 android:layout_marginTop="8dp"
                 android:textAppearance="?attr/textAppearanceBody1"
                 android:gravity="center"
-                style="@style/letraMedianaLineasSeparadas"
+                style="@style/letraMediana"
                 />
 
         </LinearLayout>
